Fixed header spacing bugs

--- a/assets/css/browley.css
+++ b/assets/css/browley.css
@@ -11,10 +11,11 @@
 	#header{
 		width: 100%;
 		height: 50px;
-		margin: 0 0 15px;
+		margin: 0;
 		background: white;
 		border-bottom: 3px solid #e7e7e7;
 		text-align: left;
+		font-weight: 300;
 	}
 
 	#click-to-close{
@@ -53,6 +54,7 @@
 		z-index: 101;
 		text-align: center;
 		box-shadow: 0px 3px 2px rgba(0,0,0,0.3);
+		font-weight: 400;
 	}
 
 	ul#nav-menu li{
